fixed blogcards and z-index on nav, modal and theme-switch

--- a/css/_blogpostcard.css
+++ b/css/_blogpostcard.css
@@ -5,7 +5,11 @@
 	padding: 0.5rem;
 	text-align: center;
 	text-wrap: pretty;
-
+	border-radius: 12px;
+	text-decoration: none;
+	border: 2px solid transparent;
+	transition: 0.2s ease;
+	box-sizing: border-box;
 }
 #posts-container {
 	display: grid;
@@ -14,11 +18,11 @@
 	justify-items: center;
 }
 .featured-image {
-	max-width: 100%;
-	height: 220px;
+	width: 100%;
+	height: 180px;
+	object-fit: cover;
 	border-radius: var(--border-radius-image);
 	padding-bottom: 0.5rem;
-	display: flex;
 }
 .call-to-action {
 	padding: 0.5rem;
