--- a/css/_carousel.css
+++ b/css/_carousel.css
@@ -13,7 +13,6 @@
 	width: 100%;
 	height: auto;
 	margin: 10px;
-	background: #fff;
 	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
@@ -25,7 +24,6 @@
 	justify-content: space-between;
 	width: 100%;
 	height: 100%;
-	background: #fff;
 	padding: 10px;
 	border-radius: 12px;
 	text-decoration: none;
@@ -33,9 +31,7 @@
 	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
 	transition: 0.2s ease;
 	box-sizing: border-box;
-}
-.card-link:hover {
-	border-color: #205c20;
+	z-index: 500;
 }
 .card-image {
 	width: 100%;
@@ -45,12 +41,10 @@
 	padding-bottom: 0.5rem;
 }
 .badge {
-	color: #205c20;
 	padding: 8px 16px;
 	font-size: 0.95rem;
 	font-weight: 500;
 	margin: 16px 0 18px;
-	background: #d6f8d6;
 	width: fit-content;
 	border-radius: 50px;
 }
