--- a/css/_containersandwrappers.css
+++ b/css/_containersandwrappers.css
@@ -5,12 +5,11 @@
 .post-card-wrapper {
 	width: 250px;
 	height: 450px;
-	border: var(--postcard-border);
-	border-radius: var(--border-radius);
-	background-color: var(--postcard-background);
-	color: var(--font-color);
+	border: 2px solid transparent;
+	border-radius: 12px;
 	margin: 0.5rem;
-	box-shadow: 0px 4px 8px var(--shadow);
+	transition: 0.2s ease;
+	box-sizing: border-box;
 }
 .container {
 	display: flex;
@@ -31,14 +30,11 @@
 	width: 100%;
 	margin: 1rem auto;
 	display: flex;
-	color: var(--font-color);
-	background-color: var(--newsletter-background);
 }
 .newsletter-wrapper {
 	padding: 2rem;
 }
 .footer-wrapper {
-	background-color: var(--footer-background);
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
